--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="widget_margin">10dp</dimen>
     <dimen name="cell_padding">10dp</dimen>
     <dimen name="cell_text_size">12sp</dimen>
+    <dimen name="section_margin">16dp</dimen>
 </resources>
