--- a/app/src/main/res/layout/app_auth_activity_login.xml
+++ b/app/src/main/res/layout/app_auth_activity_login.xml
@@ -23,19 +23,19 @@
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:orientation="vertical" >
 
-            <ImageView
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/appauth_96dp"
-                android:contentDescription="@string/openid_logo_content_description"/>
-
             <TextView
+                style="@style/Base.TextAppearance.AppCompat.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/intro_header"
-                style="@style/Base.TextAppearance.AppCompat.Title" />
+                android:text="@string/intro_header"/>
+
+            <ImageView
+                android:layout_width="192dp"
+                android:layout_height="192dp"
+                android:layout_gravity="center"
+                android:contentDescription="@string/openid_logo_content_description"
+                android:src="@mipmap/ic_launcher_foreground" />
 
             <!--
             displayed while the discovery document is loaded, and dynamic client registration is
@@ -55,7 +55,6 @@
                     android:layout_height="wrap_content"/>
 
                 <ProgressBar
-                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:indeterminate="true"/>
@@ -73,11 +72,12 @@
 
                 <Button
                     android:id="@+id/start_auth"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:text="@string/start_authorization"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center"
+                    android:textColor="@color/colorSecondary"
+                    android:background="@color/colorPrimaryDark"
+                    android:text="@string/start_authorization" />
 
                 <TextView
                     android:layout_width="wrap_content"
